infrastructure/dynamic-dns/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dynamic-dns
  labels:
    istio-injection: enabled
