infrastructure/dynamic-dns/dynamic-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-dns
  namespace: dynamic-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-dns
  template:
    metadata:
      labels:
        app: dynamic-dns
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: dynamic-dns
          image: favonia/cloudflare-ddns:1.17.1
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 32Mi
